--- a/contact.html
+++ b/contact.html
@@ -11,8 +11,7 @@
     <link rel="stylesheet" href="./css/normalize.css" />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
-    />
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"/>
     <script defer src="./js/burger.js"></script>
     <script defer src="./js/validate.js"></script>
     <!-- main css -->
