--- a/description.html
+++ b/description.html
@@ -12,6 +12,12 @@
     <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon" />
     <!-- normalize -->
     <link rel="stylesheet" href="./css/normalize.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"/>
+    <script defer src="./js/burger.js"></script>
+    <script defer src="./js/validate.js"></script>
+    
     <!-- main css -->
     <link rel="stylesheet" href="./css/main.css" />
     <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
