--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Санатории || Главная</title>
+    <!-- favicon -->
     <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon" />
+    <!-- normalize -->
     <link rel="stylesheet" href="./css/normalize.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" />
     <script defer src="./js/burger.js"></script>
+    <!-- main css -->
     <link rel="stylesheet" href="./css/main.css" />
     <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
   </head>
