--- a/about.html
+++ b/about.html
@@ -59,9 +59,7 @@
         <!-- needs fixes -->
         <img
           src="./assets/about.jpg"
-          alt="Person Pouring Salt in Bowl"
-          class="img about-img"
-        />
+          class="img about-img"/>
       </section>
       <section class="featured-sanatoriys">
         <h5 class="featured-title">Посмотрите На Это Потрясающее Зрелище!</h5>
@@ -125,6 +123,5 @@
       </div>
     </footer>
     <!-- </footer> -->
-    <script src="./js/app.js"></script>
   </body>
 </html>
